<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyStore1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log">Login</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="bac">Back</string>
    <string name="sav">Save</string>
    <string name="title_activity_emenu">EMenuActivity</string>
    <string name="logout">Log Out</string>
    <string name="homedesc">OUR POPULAR PRODUCTS</string>
    <string name="enterusername">Enter Username</string>
    <string name="enterpasswd">Enter Password</string>
    <string name="addcart">Add to Cart</string>
    <string name="cart">MY CART</string>
    <string name="bill">Billing Details</string>
    <string name="coun">Country</string>
    <string name="add1">Address line one</string>
    <string name="add2">Address line two</string>
    <string name="town">Town / City</string>
    <string name="zip">Postcode / Zip</string>
    <string name="phone">Phone</string>
    <string name="email">E-Mail Address</string>
    <string name="name">Full Name</string>
    <string name="nex">NEXT - YOUR ORDER</string>
    <string name="succ">Success</string>
    <string name="thank">Thank you</string>
    <string name="ord">Your order has been successfully placed.</string>

</resources>
